--- a/client/src/Pages/CreatePost/CreatePost.css
+++ b/client/src/Pages/CreatePost/CreatePost.css
@@ -46,8 +46,7 @@ body {
     max-width: 700px; 
     width: 100%;
     margin: 0 auto;
-    padding: 40px; 
-    
+    padding-top: 50px;
     background: var(--dark-background-navbar); 
     backdrop-filter: blur(10px) saturate(180%); 
     -webkit-backdrop-filter: blur(10px) saturate(180%); 
